src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>rC_Bios__Deceased_Month__c</fullName>
        <description>Month Contact is deceased.</description>
        <inlineHelpText>Month Contact is deceased.</inlineHelpText>
        <label>Deceased Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased_Year__c</fullName>
        <description>Year Contact is deceased.</description>
        <inlineHelpText>Year Contact is deceased.</inlineHelpText>
        <label>Deceased Year</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field indicating Contact is deceased.</description>
        <inlineHelpText>Indicates Contact is deceased.</inlineHelpText>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Demographic_Profile__c</fullName>
        <description>Formula Field providing gender, age range and ethnicity of Contact.</description>
        <formula>TEXT(rC_Bios__Gender__c) &amp;&quot; | &quot;&amp; rC_Bios__Age_Range__c &amp; &quot; | &quot;&amp;TEXT(rC_Bios__Ethnicity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gender, age range and ethnicity of Contact.</inlineHelpText>
        <label>Demographic Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Ethnicity__c</fullName>
        <description>Manually populated field indicating Ethnicity of a Contact.</description>
        <inlineHelpText>Indicates Ethnicity of a Contact.</inlineHelpText>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian / Native Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black / African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian / Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or more race</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__External_Contact_Number__c</fullName>
        <description>Identification number of Contact for external system.</description>
        <inlineHelpText>Identification number of Contact for external system.</inlineHelpText>
        <label>External Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Facebook_Url__c</fullName>
        <description>Url to Contact&apos;s Facebook page.</description>
        <inlineHelpText>Url to Contact&apos;s Facebook page.</inlineHelpText>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Gender__c</fullName>
        <description>Manually populated field indicating Gender of a Contact.</description>
        <inlineHelpText>Indicates Gender of a Contact</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Google_Plus_Url__c</fullName>
        <description>Url to Contact&apos;s Google + page.</description>
        <inlineHelpText>Url to Contact&apos;s Google + page.</inlineHelpText>
        <label>Google+ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Home_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Home phone should not be called.</description>
        <inlineHelpText>Indicates the Home phone should not be called.</inlineHelpText>
        <label>Home Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Home_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Home.</description>
        <inlineHelpText>Check to opt out of email communication to Home.</inlineHelpText>
        <label>Home Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Home_Email__c</fullName>
        <description>Manually populated field indicating Contact&apos;s home email.</description>
        <inlineHelpText>Contact&apos;s home email address.</inlineHelpText>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__LinkedIn_Url__c</fullName>
        <description>Url to Contact&apos;s LinkedIn page.</description>
        <inlineHelpText>Url to Contact&apos;s LinkedIn page.</inlineHelpText>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Maiden_Name__c</fullName>
        <description>Manually populated field indicating Contact&apos;s Maiden name.</description>
        <inlineHelpText>Indicates Contact&apos;s Maiden name.</inlineHelpText>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Marital_Status__c</fullName>
        <description>Manually populated field indicating Contact&apos;s marital status.</description>
        <inlineHelpText>Indicates Contact&apos;s marital status.</inlineHelpText>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Marital Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Partnered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formerly Married/Partnered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married At Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Middle_Name__c</fullName>
        <description>Manually populated field indicating Contact&apos;s middle name.</description>
        <inlineHelpText>Contact&apos;s middle name.</inlineHelpText>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Minor_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually checked or automatically checked via trigger if Contact is younger than 18 years old.</description>
        <inlineHelpText>Manually checked or automatically checked if Contact is younger than 18 years old.</inlineHelpText>
        <label>Minor Child?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Mobile_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Mobile phone should not be called.</description>
        <inlineHelpText>Indicates the Mobile phone should not be called.</inlineHelpText>
        <label>Mobile Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Other_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Other phone should not be called.</description>
        <inlineHelpText>Indicates the Other phone should not be called.</inlineHelpText>
        <label>Other Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Other_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Other.</description>
        <inlineHelpText>Check to opt out of email communication to Other.</inlineHelpText>
        <label>Other Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Other_Email__c</fullName>
        <description>Manually populated field indicating Contact&apos;s other email. address.</description>
        <inlineHelpText>Contact&apos;s other email address.</inlineHelpText>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Contact as Preferred for the Account. Contact data is automatically rolled up to Account as a result.</description>
        <inlineHelpText>Designates Contact as Preferred for the Account.</inlineHelpText>
        <label>Preferred Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Email__c</fullName>
        <description>Manualy populated field indicating a Contact&apos;s preferred email address type.</description>
        <inlineHelpText>Indicates a Contact&apos;s preferred email address type.</inlineHelpText>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Mailing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated field via trigger  when Preferred Billing Address checkbox is selected on the Manage Addresses page.</description>
        <inlineHelpText>Indicates the Preferred Billing/Mailing  Address.</inlineHelpText>
        <label>Preferred Mailing Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Contacts (Preferred Mailing Address)</relationshipLabel>
        <relationshipName>Contact_Preferred_Mailing_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Other_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated field via trigger when Preferred Other Address checkbox is selected on the Manage Addresses page.</description>
        <inlineHelpText>Indicates the Preferred Other Address.</inlineHelpText>
        <label>Preferred Other Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Contacts (Preferred Other Address)</relationshipLabel>
        <relationshipName>Contacts_Preferred_Other_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Phone__c</fullName>
        <description>Manualy populated field indicating a Contact&apos;s preferred email phone number.</description>
        <inlineHelpText>Indicates a Contact&apos;s preferred phone number.</inlineHelpText>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Primary_Constituent_Type__c</fullName>
        <description>Subcategory of primary Constituency type rolls up to this field.</description>
        <inlineHelpText>Subcategory of primary Constituency type rolls up to this field.</inlineHelpText>
        <label>Primary Constituent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Role__c</fullName>
        <description>Manually populated field indicating the Contact&apos;s Role.</description>
        <inlineHelpText>Indicates the Contact&apos;s Role.</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Addresses__c</fullName>
        <description>Automatically populated via auto rollup, this field contains the greatest (most recent) Last Modified Date out of all the Contact Addresses on the Contact</description>
        <inlineHelpText>Contains the greatest (most recent) Last Modified Date out of all the Contact Addresses on the Contact</inlineHelpText>
        <label>Rollup Addresses</label>
        <summarizedField>rC_Bios__Contact_Address__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>rC_Bios__Contact_Address__c.rC_Bios__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Primary_Constituent_Preference__c</fullName>
        <description>Indicates the date and time when Primary Constituent Type roll-up from  Constituent Type Preference record.</description>
        <inlineHelpText>Date/time when last Primary Constituent Type Preference updated.</inlineHelpText>
        <label>Rollup Primary Constituent Preference</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Salutation__c</fullName>
        <description>Salutation populated from Salutation record marked as Preferred Salutation = TRUE.</description>
        <inlineHelpText>Salutation populated from Preferred Salutation record.</inlineHelpText>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Secondary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated via trigger when Secondary Contact is selecteed on the Account Manage Contacts Page.</description>
        <inlineHelpText>Indicates this Contact is the secondary Contact for their Account.</inlineHelpText>
        <label>Secondary Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Suffix__c</fullName>
        <description>Suffix of Contact (e.g. Jr, Sr, II)</description>
        <inlineHelpText>Suffix of Contact (e.g. Jr, Sr, II)</inlineHelpText>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Twitter_Url__c</fullName>
        <description>Manually populated field providing the URL to the Contact&apos;s Twitter page.</description>
        <inlineHelpText>Url to Contact&apos;s Twitter page.</inlineHelpText>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Website_Url__c</fullName>
        <description>Manually populated field providing the URL to the Contact&apos;s Website.</description>
        <inlineHelpText>Contact&apos;s Website.</inlineHelpText>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field Indicating the Work phone should not be called.</description>
        <inlineHelpText>Indicates the Work phone should not be called.</inlineHelpText>
        <label>Work Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field, check to opt out of email communication to Work.</description>
        <inlineHelpText>Check to opt out of email communication to Work.</inlineHelpText>
        <label>Work Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Email__c</fullName>
        <description>Manually populated field indicating Contact&apos;s work email.</description>
        <inlineHelpText>Contact&apos;s work email address.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Work_Phone__c</fullName>
        <description>Manually populated field indicating Contact&apos;s work phone number.</description>
        <inlineHelpText>Contact&apos;s work phone number.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Public_Token__c</fullName>
        <description>Manually or automatically populated, used by external middleware to public and uniquely identify the contact record, without publicly exposing Salesforce IDs. Typically a random SHA256 or MD5.</description>
        <inlineHelpText>&quot;Public Token&quot; of the contact.</inlineHelpText>
        <label>Public Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Education__Class_Year_and_Degree__c</fullName>
        <description>Contains Class Year(s) and Degree (s) from the Education record of the Contact</description>
        <inlineHelpText>Contains Class Year(s) and Degree (s) from the Education record of the Contact</inlineHelpText>
        <label>Class Year and Degree</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Education__Days_In_Stage__c</fullName>
        <description>Number of days Contact in this stage</description>
        <formula>IF(ISNULL( rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c ),
IF(OR(ISNULL(rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c),rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c &gt; TODAY()),0,TODAY()- rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c), 
IF(OR(ISNULL(rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c),rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c &gt; rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c),0,rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c - rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days in this stage.</inlineHelpText>
        <label>Days In Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Education__Rollup_Preferred_Class_Year__c</fullName>
        <description>Indicates the date and time when preferred class year roll-up from education record.</description>
        <inlineHelpText>Date/time when last preferred class year updated.</inlineHelpText>
        <label>Rollup Preferred Class Year</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Education__Rollup_Preferred_Communication_Method__c</fullName>
        <description>Indicates the date and time when preferred Email/Phone  roll-up from communication method record.</description>
        <inlineHelpText>Date/time when last preferred Email/Phone updated.</inlineHelpText>
        <label>Rollup Preferred Communication Method</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Education__Stage_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to stage history object to access stage</description>
        <inlineHelpText>Lookup to stage history object</inlineHelpText>
        <label>Stage History</label>
        <referenceTo>rC_Education__Stage_History__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Education__Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Collected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncollectible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id. Decision Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perception Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Hard Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Hard Credits were received for the current calendar year starting January 1</inlineHelpText>
        <label>Current Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Hard Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Number of gifts on Contact where Hard Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Recognition_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Recognition Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Recognition Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Recognition_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Recognition Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Number of gifts on Contact where Recognition Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Dollar value of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Count__c</fullName>
        <description>Number of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Number of gifts on Contact where Soft Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Donor_Id__c</fullName>
        <description>External ID field used to uniquely identify and lookup a donor.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field used to uniquely identify and lookup a donor.</inlineHelpText>
        <label>Donor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Hard_Credit_Amount__c</fullName>
        <description>Amount of first Hard Credit received on Contact.</description>
        <inlineHelpText>Amount of first Hard Credit received on Contact.</inlineHelpText>
        <label>First Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Hard_Credit_Date__c</fullName>
        <description>Date first Hard Credit received on Contact.</description>
        <inlineHelpText>Date first Hard Credit received on Contact.</inlineHelpText>
        <label>First Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Recognition_Credit_Amount__c</fullName>
        <description>Amount of first Recognition Credit received on Contact.</description>
        <inlineHelpText>Amount of first Recognition Credit received on Contact.</inlineHelpText>
        <label>First Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Recognition_Credit_Date__c</fullName>
        <description>Date first Recognition Credit received on Contact.</description>
        <inlineHelpText>Date first Recognition Credit received on Contact.</inlineHelpText>
        <label>First Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Amount__c</fullName>
        <description>Amount of first Soft Credit received on Contact.</description>
        <inlineHelpText>Amount of first Soft Credit received on Contact.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Date__c</fullName>
        <description>Date first Soft Credit received on Contact.</description>
        <inlineHelpText>Date first Soft Credit received on Contact.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Hard_Credit_Amount__c</fullName>
        <description>Amount of largest Hard Credit received on Contact.</description>
        <inlineHelpText>Amount of largest Hard Credit received on Contact.</inlineHelpText>
        <label>Largest Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>